WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186331
Regression(
r232082
): Websites get loaded inside of Messages App chat transcript
https://bugs.webkit.org/show_bug.cgi?id=186331
Summary
Regression(r232082): Websites get loaded inside of Messages App chat transcript
Chris Dumez
Reported
2018-06-05 18:29:34 PDT
Websites get loaded inside of Messages App chat transcript since
https://trac.webkit.org/changeset/232082
.
Attachments
Patch
(15.38 KB, patch)
2018-06-05 18:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-06-05 18:30:00 PDT
<
rdar://problem/40735446
>
Chris Dumez
Comment 2
2018-06-05 18:37:42 PDT
Created
attachment 342018
[details]
Patch
EWS Watchlist
Comment 3
2018-06-05 18:39:55 PDT
Attachment 342018
[details]
did not pass style-queue: ERROR: Source/WebKitLegacy/mac/WebCoreSupport/WebFrameLoaderClient.mm:869: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKitLegacy/mac/WebCoreSupport/WebFrameLoaderClient.mm:901: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKitLegacy/mac/WebCoreSupport/WebFrameLoaderClient.mm:913: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 3 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 4
2018-06-05 21:53:40 PDT
Comment on
attachment 342018
[details]
Patch Clearing flags on attachment: 342018 Committed
r232536
: <
https://trac.webkit.org/changeset/232536
>
Chris Dumez
Comment 5
2018-06-05 21:53:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug